--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 											<ul class="nav navbar-nav navbar-right">
 												<li class="active"><a href="#banner">Home</a></li>
 												<li><a href="#about">About</a></li>
+                                                <li><a href="#download">Download</a></li>
 												<li><a href="#publications">Publications</a></li>
-                                                                                                <li><a href="#people">People</a></li>
+                                                <li><a href="#people">People</a></li>
 												<!-- <li><a href="#contact">Contact</a></li> -->
 											</ul>
 										</div>
@@ -239,6 +240,27 @@ Takes CHC as input and outputs the result of the
 				  </ul>
 				</div>
 			</div>
+		</div>
+            
+                	<div class="section">
+		  <div class="container object-non-visible" data-animation-effect="fadeIn">
+		    <h1 class="text-center title" id="download"><span>Download</span></h1>
+
+	            <div class="filters text-center">
+	              <ul class="nav nav-pills">
+                        <li>
+                        <img class="circular"  src="images/download.jpg" height="150" width="150">
+                          <a href="https://github.com/seahorn/seahorn/releases/download/v0.1.0-rc1/SeaHorn-0.1.0-rc1-Linux-x86_64.tar.gz"> v0.1.0-rc1 (Linux X86_64)</a>
+                        </li>
+                        <li></li>
+                        <li></li>
+                        <li>
+                          <img class="circular"  src="images/download.jpg" height="150" width="150">
+                          <a href="https://github.com/seahorn/seahorn/releases/download/v0.1.0-rc1/SeaHorn-0.1.0-rc1-Darwin-x86_64.tar.gz"> v0.1.0-rc1 ( Darwin X86_64)</a>
+                        </li>
+                      </ul>
+		    </div>
+                  </div>
 		</div>
 
                 	<!-- section start -->
