--- a/index.html
+++ b/index.html
@@ -261,6 +261,12 @@ Takes CHC as input and outputs the result of the
                           <img class="circular"  src="images/download.jpg" height="150" width="150">
                           <a href="https://github.com/seahorn/seahorn/releases/download/v0.1.0-rc2/SeaHorn-0.1.0-rc2-Darwin-x86_64.tar.gz"> v0.1.0-rc2 ( Darwin X86_64)</a>
                         </li>
+                        <li/><li/>
+                        <li>
+                          <img class="circular"  src="images/download.jpg" height="150" width="150">
+                          <a href="https://github.com/seahorn/seahorn/releases/download/v0.1.0-rc2/SeaHorn-0.1.0-rc2-Linux-i386.tar.gz"> v0.1.0-rc2 (Linux i386)</a>
+                        </li>
+
                       </ul>
 		    </div>
                   </div>
