added termination paper

--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@ Takes CHC as input and outputs the result of the
 				<div class="row">
 				  <ul class="list-unstyled">
                                     <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel: <a hreaf="http://arieg.bitbucket.org/ssft15.html"> SeaHorn Tutorial</a>.</li>
-                         <li><i class="fa fa-caret-right pr-10 text-colored"></i>T.Kahsai, J.Navas, D. Jovanovic, M. Schaf. <a hreaf="papers/lpar2015.pdf"> Finding Inconsistencies in Programs with Loops</a>. At LPAR 2015. To appear. </li>
+ <li><i class="fa fa-caret-right pr-10 text-colored"></i>C. Urabn, A. Gurfinkel, T.Kahsai<a hreaf="papers/termination_tacas16.pdf">Synthesizing Ranking Functions from Bits and Pieces</a>. At TACAS 2016. To appear. </li>
+                         <li><i class="fa fa-caret-right pr-10 text-colored"></i>T.Kahsai, J.Navas, D. Jovanovic, M. Schaf. <a hreaf="papers/lpar2015.pdf"> Finding Inconsistencies in Programs with Loops</a>. At LPAR 2015 proceedings. pp. 499-514, 2015. </li>
                       <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel <a hreaf=" http://arieg.bitbucket.org/pdf/seahorn_synasc15.pdf"> Algoritmic Logic-Based Verification with SeaHorn</a>. Invited talk at SYNASC 2015. </li>
                        <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Komuravelli, N.Bjorner, A. Gurfinkel, K. McMillan. <i>Compositional Verification of Procedural Programs using Horn Clauses over Integers and Arrays</i>. At FMCAD 2015. To appear.</li>
                                     	    <li><i class="fa fa-caret-right pr-10 text-colored"></i>A.Gurfinkel, T.Kahsai, A. Komuravelli, J.Navas. <a hreaf="papers/cav2015.pdf"> The SeaHorn Verification Framework</a>. At CAV 2015. LNCS 9206, pp. 343-361. 2015</li>
