added termination paper

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ Takes CHC as input and outputs the result of the
 				  <ul class="list-unstyled">
                                     <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel: <a hreaf="http://arieg.bitbucket.org/ssft15.html"> SeaHorn Tutorial</a>.</li>
 
- <li><i class="fa fa-caret-right pr-10 text-colored"></i>C. Urabn, A. Gurfinkel, T.Kahsai<a hreaf="papers/termination_tacas16.pdf">Synthesizing Ranking Functions from Bits and Pieces</a>. At TACAS 2016. To appear. </li>
+ <li><i class="fa fa-caret-right pr-10 text-colored"></i>C. Urabn, A. Gurfinkel, T.Kahsai. <a hreaf="papers/termination_tacas16.pdf">Synthesizing Ranking Functions from Bits and Pieces</a>. At TACAS 2016. To appear. </li>
                          <li><i class="fa fa-caret-right pr-10 text-colored"></i>T.Kahsai, J.Navas, D. Jovanovic, M. Schaf. <a hreaf="papers/lpar2015.pdf"> Finding Inconsistencies in Programs with Loops</a>. At LPAR 2015. LNCS 9450, pp. 499-514, 2015. </li>
 
                          <li><i class="fa fa-caret-right pr-10 text-colored"></i>G.Gange, J.A.Navas, P.Schachte, H.Sondergaard, P.Stuckey. <a hreaf="papers/vmcai16.pdf"> An Abstract Domain of Uninterpreted Functions</a>. At VMCAI 2016. To appear. </li>
