--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 											<ul class="nav navbar-nav navbar-right">
 												<li class="active"><a href="#banner">Home</a></li>
 												<li><a href="#about">About</a></li>
-                                                <li><a href="#download">Download</a></li>
+                        <li><a href="#download">Download</a></li>
 												<li><a href="#publications">Publications</a></li>
-                                                <li><a href="#people">People</a></li>
+                        <li><a href="#people">People</a></li>
 												<!-- <li><a href="#contact">Contact</a></li> -->
 											</ul>
 										</div>
@@ -144,6 +144,18 @@
 			</div>
 		</div>
 		<!-- banner end -->
+
+		<div class="section clearfix object-non-visible" data-animation-effect="fadeIn">
+					<div class="container">
+<h1 id="snippet" class="title text-center"><span>In Action</span></h1>
+		<div class="col-md-12">
+<p class="lead text-center">
+
+	<script type="text/javascript" src="https://asciinema.org/a/0o8yqwknuj22d3oscldc0b2lm.js" id="asciicast-0o8yqwknuj22d3oscldc0b2lm" async data-autoplay="true" data-loop="true" data-speed="3"></script>
+</p>
+</div>
+			</div>
+		</div>
 
 		<!-- section start -->
 		<!-- ================ -->
@@ -258,17 +270,27 @@ Takes CHC as input and outputs the result of the
 
 	            <div class="filters text-center">
 	              <ul class="nav nav-pills">
+									<li>
+									<img class="circular"  src="images/docker.png" height="100" width="100">
+										<a href="https://hub.docker.com/r/seahorn/seahorn/"> SeaHorn Docker Image</a>
+									</li>
+
+									<li>
+										<img class="circular"  src="images/download.jpg" height="150" width="150">
+										<a href="https://github.com/seahorn/seahorn/releases/download/v0.1.0/SeaHorn-0.1.0-Linux-x86_64.tar.gz"> v0.1.0 (Linux X86_64)</a>
+									</li>
+
                         <li>
                         <img class="circular"  src="images/download.jpg" height="150" width="150">
                           <a href="https://github.com/seahorn/seahorn/releases/download/v0.1.0-rc2/SeaHorn-0.1.0-rc2-Linux-x86_64.tar.gz"> v0.1.0-rc2 (Linux X86_64)</a>
                         </li>
-                        <li></li>
-                        <li></li>
+
+
                         <li>
                           <img class="circular"  src="images/download.jpg" height="150" width="150">
                           <a href="https://github.com/seahorn/seahorn/releases/download/v0.1.0-rc2/SeaHorn-0.1.0-rc2-Darwin-x86_64.tar.gz"> v0.1.0-rc2 ( Darwin X86_64)</a>
                         </li>
-                        <li/><li/>
+
                         <li>
                           <img class="circular"  src="images/download.jpg" height="150" width="150">
                           <a href="https://github.com/seahorn/seahorn/releases/download/v0.1.0-rc2/SeaHorn-0.1.0-rc2-Linux-i386.tar.gz"> v0.1.0-rc2 (Linux i386)</a>
