--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 											<ul class="nav navbar-nav navbar-right">
 												<li class="active"><a href="#banner">Home</a></li>
 												<li><a href="#about">About</a></li>
+												<li><a href="#tec">Techniques</a></li>
                         <li><a href="#download">Download</a></li>
 												<li><a href="#publications">Publications</a></li>
                         <li><a href="#people">People</a></li>
@@ -137,7 +138,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 							<h1 class="text-center"> <span>SeaHorn</span></h1>
-							<p class="lead text-center">A fully automated verification framework for LLVM-based languages.</p>
+							<p class="lead text-center">A fully automated analysis framework for LLVM-based languages.</p>
 						</div>
 					</div>
 				</div>
@@ -233,6 +234,126 @@ Takes CHC as input and outputs the result of the
 			</div>
 		</div>
 
+		<div class="section clearfix object-non-visible" data-animation-effect="fadeIn">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 ">
+						<h1 id="tec" class="title text-center"><span>Analysis techniques</span></h1>
+						<p class="lead text-center">(They way we prove things)</p>
+
+						<div class="row">
+							<div class="col-md-4">
+								<div class="image-box">
+									<div class="overlay-container">
+										<img src="images/termination.png" alt="">
+										<a class="overlay" data-toggle="modal" data-target="#term">
+											<i class="fa fa-search-plus"></i>
+											<span>(Non)-Termination checking</span>
+										</a>
+									</div>
+									 <a class="btn btn-default btn-block" data-toggle="modal" data-target="#term">(Non)-termination checking</a>
+								</div>
+								<!-- Modal -->
+								<div class="modal fade" id="term" tabindex="-1" role="dialog" aria-labelledby="project-1-label" aria-hidden="true">
+									<div class="modal-dialog modal-lg">
+										<div class="modal-content">
+
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+												<h4 class="modal-title" id="project-1-label">(Non)-Termination checking</h4>
+											</div>
+											<div class="modal-body">
+
+												<div class="row">
+													<div class="col-md-6">
+														<p>
+                              SeaHorn can be used to prove termination and non-termination of programs.
+															The core of the approach lies on the innovative use of the backend verification engines to build termination arguments.
+															 More specifically, the backend verification engines are used to systematically sample terminating program execution
+															 and to extrapolate from these a candidate ranking function for the program.
+															 The candidate ranking function can be a piecewise-defined, lexicographic, or multiphase combination of affine functions
+															 of the program variables. The backend verification engines are then used to validate the candidate ranking function,
+															 or to otherwise provide a witness for program non-termination.
+															 More information about this can be found this <a href="papers/termination_tacas16.pdf">paper</a>.
+														</p>
+
+
+													</div>
+													<div class="col-md-6">
+														<img src="images/termination.png" alt="">
+													</div>
+												</div>
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- Modal end -->
+							</div>
+							<div class="col-md-4">
+								<div class="image-box">
+									<div class="overlay-container">
+
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="image-box">
+									<div class="overlay-container">
+										<img src="images/inc.png" alt="">
+										<a class="overlay" data-toggle="modal" data-target="#inc">
+											<i class="fa fa-search-plus"></i>
+											<span>Inconsistency Checking</span>
+										</a>
+									</div>
+									 <a class="btn btn-default btn-block" data-toggle="modal" data-target="#inc">Inconsistecncy Checking</a>
+								</div>
+								<!-- Modal -->
+								<div class="modal fade" id="inc" tabindex="-1" role="dialog" aria-labelledby="project-2-label" aria-hidden="true">
+									<div class="modal-dialog modal-lg">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+												<h4 class="modal-title" id="project-2-label">Inconsistency Checking</h4>
+											</div>
+											<div class="modal-body">
+
+												<div class="row">
+													<div class="col-md-6">
+														<p>
+															Inconsistent code is an important class of program abnormalities that appears in real-world code bases and often reveals serious bugs.
+															A piece of code is inconsistent if it is not part of any safely terminating execution.
+															Existing approaches to inconsistent code detection scale to programs with millions of lines of code,
+															and have lead to patches in applications like the web-server Tomcat or the Linux kernel.
+															However, the ability of existing tools to detect inconsistencies is limited by gross over-approximation of looping control-flow.
+                            SeaHorn is able to detect inconsistent code fragments.
+														This is done by computing a path coverage for the generated system of Horn clauses.
+														More information about this can be found in this <a href="papers/lpar2015.pdf">paper</a>.
+														</p>
+
+														</div>
+													<div class="col-md-6">
+														<img src="images/inc.png" alt="">
+													</div>
+												</div>
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- Modal end -->
+							</div>
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		<!-- section end -->
 
 
 
@@ -358,7 +479,7 @@ Takes CHC as input and outputs the result of the
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<p class="text-center">© Carnegie Mellon University 2015 | <a target="_blank"="http://twitter.github.io/bootstrap">Bootstrap</a>|<a target="_blank" href="http://htmlcoder.me">Worthy</a>.</p>
+							<p class="text-center">© Carnegie Mellon University 2016 | <a target="_blank" href="http://twitter.github.io/bootstrap">Bootstrap</a> | <a target="_blank" href="http://htmlcoder.me">Worthy</a>.</p>
 						</div>
 					</div>
 				</div>
