--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ Takes CHC as input and outputs the result of the
 	              <ul class="nav nav-pills">
                         <li>
                         <img class="circular"  src="images/arie.jpg" height="150" width="150">
-                        <a href="http://arieg.bitbucket.org">Arie Gurfinkel <br>(<a href="ece.uwaterloo.ca">UWaterloo</a>)</a>
+                        <a href="http://arieg.bitbucket.org">Arie Gurfinkel <br>(<a href="http://ece.uwaterloo.ca">UWaterloo</a>)</a>
                         </li>
                         <li></li>
                         <li></li>
