--- a/pdtg16/index.html
+++ b/pdtg16/index.html
@@ -31,8 +31,8 @@
 
 		<!-- Custom css -->
 		<link href="css/custom.css" rel="stylesheet">
-		  <link href="http//maxcdn.bootstrapcdn.com/bootswatch/3.1.1/flatly/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http//cdn.datatables.net/plug-ins/be7019ee387/integration/bootstrap/3/dataTables.bootstrap.css">
+		  <link href="http://maxcdn.bootstrapcdn.com/bootswatch/3.1.1/flatly/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/plug-ins/be7019ee387/integration/bootstrap/3/dataTables.bootstrap.css">
 	</head>
 
 	<body class="no-trans">
@@ -118,26 +118,22 @@
 		</div>
 
 
-
-
-
-
-
-		<!-- JavaScript files placed at the end of the document so the pages load faster
-		================================================== -->
-		<!-- Jquery and Bootstap core js files -->
-		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
-    <script type="text/javascript" language="javascript" src="//cdn.datatables.net/1.10.0/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" language="javascript" src="//cdn.datatables.net/plug-ins/be7019ee387/integration/bootstrap/3/dataTables.bootstrap.js"></script>
-
+		<!-- Bootstrap core JavaScript
+	 ================================================== -->
+	 <!-- Placed at the end of the document so the pages load faster -->
+	 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	 <!-- Latest compiled and minified JavaScript -->
+	 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	 <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
+	 <script type="text/javascript" language="javascript" src="http://cdn.datatables.net/1.10.0/js/jquery.dataTables.min.js"></script>
+	 <script type="text/javascript" language="javascript" src="http://cdn.datatables.net/plug-ins/be7019ee387/integration/bootstrap/3/dataTables.bootstrap.js"></script>
 		<script type="text/javascript" charset="utf-8">
 		 d3.csv("data/06.10.product_lines.csv", function(data) {
-				 // the columns you'd like to display
-				 var columns = ["File", "Klee-0", "Klee-1", "Klee-2", "SeaHorn"];
 
+				 // the columns you'd like to display
+				 var columns = ["Benchmark", " Klee-0", " Klee-1", " Klee-2", " SeaHorn"];
+				 console.log(data[0])
 				 var table = d3.select("#pl_csv"),
 				 thead = table.append("thead"),
 				 tbody = table.append("tbody");
@@ -166,25 +162,26 @@
 						.enter()
 						.append("td")
 						.text(function(d) { return d.value; });
-		 $('#pl_cvs').DataTable({"paging": false});
+
+		 $('#pl_cvs').dataTable({"paging": false});
 
 		 });
 		</script>
 
-		<script type="text/javascript" src="plugins/jquery.min.js"></script>
+		<!-- <script type="text/javascript" src="plugins/jquery.min.js"></script> -->
 		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
 		<!-- Modernizr javascript -->
 		<script type="text/javascript" src="plugins/modernizr.js"></script>
 
 		<!-- Isotope javascript -->
-		<script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
+		<!-- <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script> -->
 
 		<!-- Backstretch javascript -->
 		<script type="text/javascript" src="plugins/jquery.backstretch.min.js"></script>
 
 		<!-- Appear javascript -->
-		<script type="text/javascript" src="plugins/jquery.appear.js"></script>
+		<!-- <script type="text/javascript" src="plugins/jquery.appear.js"></script> -->
 
 		<!-- Initialization of Plugins -->
 		<script type="text/javascript" src="js/template.js"></script>
