--- a/pdtg16/index.html
+++ b/pdtg16/index.html
@@ -304,7 +304,7 @@
 		<script type="text/javascript" src="plugins/modernizr.js"></script>
 
 		<!-- Isotope javascript -->
-		<!-- <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script> -->
+		<script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
 
 		<!-- Backstretch javascript -->
 		<script type="text/javascript" src="plugins/jquery.backstretch.min.js"></script>
