--- a/pdtg16/index.html
+++ b/pdtg16/index.html
@@ -257,6 +257,45 @@
 
 		 });
 		</script>
+		<script type="text/javascript" charset="utf-8">
+		 d3.csv("data/06.10.simple.csv", function(data) {
+
+				 // the columns you'd like to display
+				 var columns = ["Benchmark", " Klee-0", " Klee-1", " Klee-2", " SeaHorn"];
+
+				 var table = d3.select("#simple_csv"),
+				 thead = table.append("thead"),
+				 tbody = table.append("tbody");
+
+				 // append the header row
+				 thead.append("tr")
+							.selectAll("th")
+							.data(columns)
+							.enter()
+							.append("th")
+							.text(function(column) { return column; });
+
+				 // create a row for each object in the data
+				 var rows = tbody.selectAll("tr")
+												 .data(data)
+												 .enter()
+												 .append("tr");
+
+				 // create a cell in each row for each column
+				 var cells = rows.selectAll("td")
+												 .data(function(row) {
+						 return columns.map(function(column) {
+								 return {column: column, value: row[column]};
+						 });
+				 })
+						.enter()
+						.append("td")
+						.text(function(d) { return d.value; });
+
+		 $('#simple_cvs').dataTable({"paging": false});
+
+		 });
+		</script>
 
 		<script type="text/javascript" charset="utf-8">
 		 d3.csv("data/06.10.ldv.csv", function(data) {
