--- a/pdtg16/index.html
+++ b/pdtg16/index.html
@@ -340,7 +340,7 @@
 		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
 		<!-- Modernizr javascript -->
-		<script type="text/javascript" src="plugins/modernizr.js"></script>
+		<!-- <script type="text/javascript" src="plugins/modernizr.js"></script> -->
 
 		<!-- Isotope javascript -->
 		<script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
@@ -352,7 +352,7 @@
 		<!-- <script type="text/javascript" src="plugins/jquery.appear.js"></script> -->
 
 		<!-- Initialization of Plugins -->
-		<script type="text/javascript" src="js/template.js"></script>
+		<!-- <script type="text/javascript" src="js/template.js"></script> -->
 
 		<!-- Custom Scripts -->
 		<script type="text/javascript" src="js/custom.js"></script>
