added link to blog

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 										<!-- Collect the nav links, forms, and other content for toggling -->
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
-												<li class="active"><a href="#banner">Home</a></li>
+												<!-- <li class="active"><a href="#banner">Home</a></li> -->
+												<li><a href="http://seahorn.github.io/blog/">Blog</a></li>
 												<li><a href="#about">About</a></li>
 												<li><a href="#tec">Techniques</a></li>
                         <li><a href="#download">Download</a></li>
