--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 		<!-- banner start -->
 		<!-- ================ -->
-		<!-- <div id="banner" class="banner">
+		<div id="banner" class="banner">
 			<div class="banner-image"></div>
 			<div class="banner-caption">
 				<div class="container">
@@ -144,7 +144,7 @@
 					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 		<!-- banner end -->
 
 		<div class="section clearfix object-non-visible" data-animation-effect="fadeIn">
