--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Takes CHC as input and outputs the result of the
 				<h1 id="publications" class="title text-center"><span>Publications</span></h1>
 				<div class="row">
 				  <ul class="list-unstyled">
-				    <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel and J.A.Navas <a href="papers/sea-dsa-SAS17.pdf"> A Context-Sensitive Memory Model for Verification of C/C++ Programs </a>.</li>				    
+				    <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel and J.A.Navas <a href="papers/sea-dsa-SAS17.pdf"> A Context-Sensitive Memory Model for Verification of C/C++ Programs </a>. At SAS 2017. </li>				    
                                     <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel: <a href="https://arieg.bitbucket.io/ssft15.html"> SeaHorn Tutorial</a>.</li>
 				    <li><i class="fa fa-caret-right pr-10 text-colored"></i>C. Urban, A. Gurfinkel, T.Kahsai. <a href="papers/termination_tacas16.pdf">Synthesizing Ranking Functions from Bits and Pieces</a>. At TACAS 2016. </li>
 				    <li><i class="fa fa-caret-right pr-10 text-colored"></i>T.Kahsai, J.A.Navas, D. Jovanovic, M. Schaf. <a href="papers/lpar2015.pdf"> Finding Inconsistencies in Programs with Loops</a>. At LPAR 2015. LNCS 9450, pp. 499-514, 2015. </li>
