--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       <!-- ================ -->
       <div class="section">
         <div class="container object-non-visible" data-animation-effect="fadeIn">
-          <h1 class="text-center title" id="people"><span>People</span></h1>
+          <h1 class="text-center title" id="people"><span>Founders</span></h1>
 
           <div class="filters text-center">
             <ul class="nav nav-pills">
@@ -417,7 +417,7 @@
               <li></li>
               <li>
                 <img class="circular"  src="images/teme.jpg" height="130" width="130">
-                <a href="http://lememta.info">Temesghen Kahsai <br>(NASA Ames / CMU)</a>
+                <a href="http://lememta.info">Temesghen Kahsai <br>(Amazon)</a>
               </li>
               <li></li>
               <li></li>
