--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <p class="text-center">© Carnegie Mellon University 2016 | <a target="_blank" href="http://twitter.github.io/bootstrap">Bootstrap</a> | <a target="_blank" href="http://htmlcoder.me">Worthy</a>.</p>
+                <p class="text-center">© Arie Gurfinkel 2018| <a target="_blank" href="http://twitter.github.io/bootstrap">Bootstrap</a> | <a target="_blank" href="http://htmlcoder.me">Worthy</a>.</p>
               </div>
             </div>
           </div>
