Added entry for VSTTE 2018

--- a/index.html
+++ b/index.html
@@ -369,6 +369,8 @@
           <h1 id="publications" class="title text-center"><span>Publications</span></h1>
           <div class="row">
             <ul class="list-unstyled">
+
+              <li><i class="fa fa-caret-right pr-10 text-colored"></i>J. Gennari, A. Gurfinkel, T.Kahsai, J.A.Navas, and E.J.Schwartz <a href="papers/cex-vstte18.pdf"> Executable Counterexamples in Software Model Checking </a>. (<a href="papers/cex-vstte18-slides.pdf">Slides</a>) At VSTTE 2018. </li>
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel and J.A.Navas <a href="papers/sea-dsa-SAS17.pdf"> A Context-Sensitive Memory Model for Verification of C/C++ Programs </a>. (<a href="papers/sas17_slides.pdf">Slides</a>) At SAS 2017. </li>
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel: <a href="https://arieg.bitbucket.io/ssft15.html"> SeaHorn Tutorial</a>.</li>
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>C. Urban, A. Gurfinkel, T.Kahsai. <a href="papers/termination_tacas16.pdf">Synthesizing Ranking Functions from Bits and Pieces</a>. At TACAS 2016. </li>
