--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel: <a href="https://arieg.bitbucket.io/ssft15.html"> SeaHorn Tutorial</a>.</li>
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>C. Urban, A. Gurfinkel, T.Kahsai. <a href="papers/termination_tacas16.pdf">Synthesizing Ranking Functions from Bits and Pieces</a>. At TACAS 2016. </li>
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>T.Kahsai, J.A.Navas, D. Jovanovic, M. Schaf. <a href="papers/lpar2015.pdf"> Finding Inconsistencies in Programs with Loops</a>. At LPAR 2015. LNCS 9450, pp. 499-514, 2015. </li>
-
+              <li><i class="fa fa-caret-right pr-10 text-colored"></i>G.Gange, J.A.Navas, P.Schachte, H.Sondergaard, P.Stuckey. <a href="papers/split-dbm-sas16.pdf"> Exploiting Sparsity in Difference-Bound Matrices </a>. At SAS 2016. </li>
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>G.Gange, J.A.Navas, P.Schachte, H.Sondergaard, P.Stuckey. <a href="papers/vmcai16.pdf"> An Abstract Domain of Uninterpreted Functions</a>. At VMCAI 2016. </li>
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel <a href="https://arieg.bitbucket.io/pdf/seahorn_synasc15.pdf"> Algoritmic Logic-Based Verification with SeaHorn</a>. Invited tutorial at SYNASC 2015. </li>
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Komuravelli, N.Bjorner, A. Gurfinkel, K. McMillan. <i>Compositional Verification of Procedural Programs using Horn Clauses over Integers and Arrays</i>. At FMCAD 2015. IEEE, pp. 89-96, 2015.</li>
