--- a/index.html
+++ b/index.html
@@ -147,17 +147,20 @@
   </div>
   <!-- banner end -->
 
-  <!-- <div class="section clearfix object-non-visible" data-animation-effect="fadeIn"> -->
-  <!--   <div class="container"> -->
-  <!--     <h1 id="snippet" class="title text-center"><span>In Action</span></h1> -->
-  <!--     <div class="col-md-12"> -->
-  <!--       <p class="lead text-center"> -->
+  <div class="section clearfix object-non-visible" data-animation-effect="fadeIn">
+    <div class="container">
+      <h1 id="snippet" class="title text-center"><span>In Action</span></h1>
+      <div class="col-md-12">
+        <p class="lead text-center">
 
-  <!--         <script type="text/javascript" src="https://asciinema.org/a/0o8yqwknuj22d3oscldc0b2lm.js" id="asciicast-0o8yqwknuj22d3oscldc0b2lm" async data-autoplay="true" data-loop="true" data-speed="3"></script> -->
-  <!--       </p> -->
-  <!--     </div> -->
-  <!--   </div> -->
-  <!-- </div> -->
+	  <a href="https://asciinema.org/a/3D5mHHyymCZ6atYwnscyEdYb8" target="_blank"><img src="https://asciinema.org/a/3D5mHHyymCZ6atYwnscyEdYb8.svg" /></a>
+
+	  <!-- old demo -->
+          <!-- <script type="text/javascript" src="https://asciinema.org/a/0o8yqwknuj22d3oscldc0b2lm.js" id="asciicast-0o8yqwknuj22d3oscldc0b2lm" async data-autoplay="true" data-loop="true" data-speed="3"></script> -->
+        </p>
+      </div>
+    </div>
+  </div>
 
   <!-- section start -->
   <!-- ================ -->
