--- a/index.html
+++ b/index.html
@@ -373,10 +373,10 @@
           <div class="row">
             <ul class="list-unstyled">
 
-              <li><i class="fa fa-caret-right pr-10 text-colored"></i>E. Gershuni, N. Amit, A.&nbsp;Gurfinkel, N. Narodytska, J.&nbsp;A.&nbsp;Navas, N. Rinetzky, L. Ryzhyk and M. Sagiv. <a href="papers/ebpf-pldi19.pdf"> Simple and Precise Static Analysis of Untrusted Linux Kernel Extensions </a>. At PLDI 2019. </li>
+              <li><i class="fa fa-caret-right pr-10 text-colored"></i>J. Kuderski, A. Gurfinkel and J.A.Navas. Unification-based Pointer Analysis without Oversharing.  At FMCAD 2019. </li>
+              <li><i class="fa fa-caret-right pr-10 text-colored"></i>E. Gershuni, N. Amit, A.&nbsp;Gurfinkel, N. Narodytska, J.&nbsp;A.&nbsp;Navas, N. Rinetzky, L. Ryzhyk and M. Sagiv. <a href="papers/ebpf-pldi19.pdf"> Simple and Precise Static Analysis of Untrusted Linux Kernel Extensions </a>. (<a href="papers/EBPF-PLDI-19.pptx">Slides</a>) At PLDI 2019. </li>
 	      
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>J. Gennari, A. Gurfinkel, T.Kahsai, J.A.Navas, and E.J.Schwartz. <a href="papers/cex-vstte18.pdf"> Executable Counterexamples in Software Model Checking </a>. (<a href="papers/cex-vstte18-slides.pdf">Slides</a>) At VSTTE 2018. </li>
-
 	      
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel and J.A.Navas. <a href="papers/sea-dsa-SAS17.pdf"> A Context-Sensitive Memory Model for Verification of C/C++ Programs </a>. (<a href="papers/sas17_slides.pdf">Slides</a>) At SAS 2017. </li>
               <li><i class="fa fa-caret-right pr-10 text-colored"></i>A. Gurfinkel: <a href="https://arieg.bitbucket.io/ssft15.html"> SeaHorn Tutorial</a>.</li>
