--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
       <div class="col-md-12">
         <p class="lead text-center">
 
-	  <a href="https://asciinema.org/a/3D5mHHyymCZ6atYwnscyEdYb8" target="_blank"><img src="https://asciinema.org/a/3D5mHHyymCZ6atYwnscyEdYb8.svg" /></a>
-
+	  <script type="text/javascript" id="asciicast-NanyVLi9rXwxiLO403YM0xR1S" src="https://asciinema.org/a/NanyVLi9rXwxiLO403YM0xR1S.js" async data-autoplay="true" data-loop="true"></script>	  
 	  <!-- old demo -->
           <!-- <script type="text/javascript" src="https://asciinema.org/a/0o8yqwknuj22d3oscldc0b2lm.js" id="asciicast-0o8yqwknuj22d3oscldc0b2lm" async data-autoplay="true" data-loop="true" data-speed="3"></script> -->
         </p>
