--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
       <h1 id="snippet" class="title text-center"><span>In Action</span></h1>
       <div class="col-md-12">
         <p class="lead text-center">
-
-	  <script type="text/javascript" id="asciicast-NanyVLi9rXwxiLO403YM0xR1S" src="https://asciinema.org/a/NanyVLi9rXwxiLO403YM0xR1S.js" async data-autoplay="true" data-loop="true"></script>	  
+<script type="text/javascript" id="asciicast-261355" src="https://asciinema.org/a/261355.js" async data-autoplay="true" data-loop="true"></script>
 	  <!-- old demo -->
           <!-- <script type="text/javascript" src="https://asciinema.org/a/0o8yqwknuj22d3oscldc0b2lm.js" id="asciicast-0o8yqwknuj22d3oscldc0b2lm" async data-autoplay="true" data-loop="true" data-speed="3"></script> -->
         </p>
